# thingino-web-builder

./: .dockerignore  .env.example  .gitignore  Caddyfile  Containerfile  DEPLOY.md  Dockerfile  README.md  creds.sh  deploy.sh  docker-compose.yml  setup.sh
.github/workflows/: build.yml  deploy-worker.yml  pages.yml  release.yml
broker/: Cargo.toml
broker/src/: main.rs
deploy/quadlet/: thingino-broker.container  thingino-caddy.container
deploy/systemd/: thingino-broker-update.path  thingino-broker-update.service
web/: admin.html  admin.js  app.js  config.js  i18n-adm-en.js  i18n-idx-de.js  i18n-idx-en.js  i18n-idx-es.js  i18n-idx-fr.js  i18n-idx-ja.js  i18n-idx-pt.js  i18n-idx-ru.js  i18n-idx-zh-CN.js  i18n.js  index.html  privacy.html  sw-register.js  sw.js
worker/: README.md  schema.sql  wrangler.toml
worker/src/: index.js
