[package]
name = "thingino-build-broker"
version = "0.1.0"
edition = "2021"
description = "Thin control plane for the thingino web firmware builder: rate-limits and dispatches GitHub Actions builds."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
libc = "0.2"
hmac = "0.12"
sha1 = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
